complete project list

--- a/CW.html
+++ b/CW.html
@@ -100,7 +100,7 @@
 							<h2>Research</h2>
 							<h3>Statistics</h3>
 							<p>On average, there are 2 events per day.</p>
-							<span class="image main"><img src="images/CW_table1.png" alt="" /></span>
+							<img class="image main" src="images/CW_table1.png" alt="" />
 							<h3>CommonWealth  Reader Profile</h3>
 							<div class="columns project-intro">
 								<div class="caption caption-1">
@@ -206,18 +206,18 @@
 							<p>Needs: Events management, vouchers management, campaign launching, interactions with attendees.</p>
 							<h4>From event attendees:</h4>
 							<p>Needs: Events information, events notice, information sharing, VIP members information.</p>
-							<span class="image main"><img src="images/CW_insight.png" alt="" /></span>
+							<img class="image main" src="images/CW_insight.png" alt="" />
 
 							<h2>Goals</h2>
 							<p>We aimed to use this event app/web to increase the stickiness of our members and enlarge the customers base. By attending any of CommonWealth business unit's event, we can maintain the interactions even after the event. Existing customers can get more personalized information and discount by interacting with CommonWealth. Thus the app/web forms a virtuous circle.</p>
 
 							<h2>Features</h2>
 							<p>Starting with goals CommonWealth wants to achieve and needs users want to be satisfied, and then developing features for this app/web; the final step was to assign correct information in every page and adjust information hierarchy.</p>
-							<span class="image main"><img src="images/CW_feature.png" alt="" /></span>
+							<img class="image main" src="images/CW_feature.png" alt="" />
 
 							<h2>Sitemap</h2>
 							<p>Based on events' interactive attribute, we hope to increase/attract users to attend more events held by CommonWealth, thus we not only included traditional event platform's features, but also added live streaming and LBS service, hope any attendees can know more and learn more by  visiting/installing our web/app.</p>
-							<span class="image main"><img src="images/CW_sitemap.png" alt="" /></span>
+							<img class="image main" src="images/CW_sitemap.png" alt="" />
 
 							<h2>Wireframe</h2>
 							<iframe width="100%" height="420" src="https://www.youtube.com/embed/tl6KxQrLrW0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
