--- a/OutPerform.html
+++ b/OutPerform.html
@@ -90,7 +90,7 @@
 							<p>Participating in outdoor activities becomes more and more popular for city dwellers, and people keep buying outdoor gears but probably not using them as often as they thought. According to a recent study from the Outdoor Industry Association, each year Americans spend $120 billion on products for outdoor recreation (Appalachian Mountain Club, 2012). There is a clear demand for gently used outdoor gears since we can find relevant websites selling used gears for different kinds of activities. Meanwhile, outdoor activity beginners would spend a lot of money if they are hiring personal trainers, and those who don’t may get injured without proper instructions or helps from experienced trainers.</p>
 							
 							<h2>The Process</h2>
-							<span class="image main"><img src="images/Out_process.png" alt="" /></span>
+							<img class="image main" src="images/Out_process.png" alt="" />
 							
 							<h2>Interview</h2>
 							<p>The design process was started by several interviews with those who wish to participate more in outdoor activities and who identified themselves as frequent outdoor activities participants. Some important findings are:</p>
@@ -102,7 +102,7 @@
 							<p>In the beginning, my design was only for people to search nearby users to do outdoor activities together. However, after the interviews, I realized that differentiating experts and novices is difficult and experts may lack motivations to “share their knowledge” with novices. The book Modeling Users: Personas and Goals (Cooper, 2014) actually helped me a lot to re-frame my problem and let me think about what experts may need and what could motivate them. What can they offer? How can they benefit from my design? When I thought about these questions and tried to answer them, I figured that experts have a lot of equipment or gears that can share with other people. When we give them the incentive to share gears, they may be motivated and start to share their knowledge as well.</p>
 
 							<h2>Competitive Analysis</h2>
-							<span class="image main"><img src="images/Out_CA.png" alt="" /></span>
+							<img class="image main" src="images/Out_CA.png" alt="" />
 							<div class="columns project-intro">
 								<div class="caption caption-1">
 									<img src="images/Out_CA1.png" alt="description"></img>
@@ -129,7 +129,7 @@
 							<h2>Brainstorming</h2>
 							<p><i><b>“To be creative, lose the fear of being wrong.”</b></i></p>
 							<p>8 solutions when you don’t have outdoor activity equipment.</p>
-							<span class="image main"><img src="images/Out_brain.png" alt="" /></span>
+							<img class="image main" src="images/Out_brain.png" alt="" />
 
 							<h2>Scenario & Persona</h2>
 							<p>Basing on the ideas from brainstorming, I picked 6 solutions that are viable with current technologies. Then I developed each scenario by sketching out the storyboards.</p>
@@ -160,10 +160,10 @@
 								</div>
 							</div>
 							<p>Besides storyboarding, I made 3 personas and 1 anti-persona based on the interview data interpretation.</p>
-							<span class="image main"><img src="images/Out_persona1.png" alt="" /></span>
-							<span class="image main"><img src="images/Out_persona2.png" alt="" /></span>
-							<span class="image main"><img src="images/Out_persona3.png" alt="" /></span>
-							<span class="image main"><img src="images/Out_persona4.png" alt="" /></span>
+							<img class="image main" src="images/Out_persona1.png" alt="" />
+							<img class="image main" src="images/Out_persona2.png" alt="" />
+							<img class="image main" src="images/Out_persona3.png" alt="" />
+							<img class="image main" src="images/Out_persona4.png" alt="" />
 
 							<h2>The Functionality</h2>
 							<p>Search a variety of outdoor equipment nearby your location.</p>
@@ -176,7 +176,7 @@
 							</ol>
 
 							<h2>Interaction Map</h2>
-							<span class="image main"><img src="images/Out_interactionmap.png" alt="" /></span>
+							<img class="image main" src="images/Out_interactionmap.png" alt="" />
 
 							<h2>Paper prototype</h2>
 							<iframe width="100%" height="420" src="https://www.youtube.com/embed/bJBFy1ua4ws" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
@@ -184,7 +184,7 @@
 							<p>My final design decision is that we should empower our users rather than restrict their behaviors. Users have to verify their skills by certifications on the current applications or websites in the market, but I decided to let users self-report their skill level and their equipment condition. However, to ensure the app provide trustable information, the skill level or the product condition that is shown on the user profile would average reviews from other users and the self-report level.</p>
 
 							<h2>High-Fi Prototype</h2>
-							<span class="image main"><img src="images/Out_all.png" alt="" /></span>
+							<img class="image main" src="images/Out_all.png" alt="" />
 
 							<h2>Reflection</h2>
 							<p>My design philosophy is “design for equity”. In our society, we have a lot of people with low-income who may not have the money to maintain their well-being, not to mention doing outdoor activities that require knowledge and expensive equipment. The possible social impacts of the design are that the equipment renting business may lose customers if people start to share their own equipment; but on the bright side, the design also encourages people to connect both online and offline, and cultivate the habit of participating in outdoor activities.</p>
