--- a/Shopping.html
+++ b/Shopping.html
@@ -69,7 +69,7 @@
 							<div class="credits">
 								
 							</div>
-							<span class="image main"><img src="images/Juvo_banner.png" alt="" /></span>
+							<span class="image main"><img src="images/Shopping_banner.png" alt="" /></span>
 							<h2>Project Introduction</h2>
 							<p>Different shopping apps have different interface styles. In this study, we use eye-tracking technique and interview to know more information about how people from different countries/cultures look at the interfaces and examine the information hierarchy. We investigated 9 of the most popular shopping apps used in Taiwan, China, and the U.S. We chose 3 out of 9 apps to represent shopping habits from 3 different areas. Results show that participants can find items on Yahoo Shopping Mall fastest; they also found Amazon’s home screen alignment was the easist to understand.</p>
 
@@ -89,17 +89,17 @@
 							<h2>The Problem</h2>
 							<p>Once, I found out my Chinese classmates have very different online shopping habits from me. I started to wonder why China's mobile shopping apps interface and features are very different from Taiwan’s mobile shopping apps. Driven by curiosity, I cooperated with lots exchange students from China in the university and launch a mobile shopping app user study.</p>
 							<h2>The Process</h2>
-							<span class="image main"><img src="images/Shopping_process.png" alt="" /></span>
+							<img class="image main" src="images/Shopping_process.png" alt="" />
 
 							<h2>Menu Features</h2>
 							<p>First, we started to categorize and analyze the components of the shopping apps.</p>
-							<span class="image main"><img src="images/Shopping_table.png" alt="" /></span>
+							<img class="image main" src="images/Shopping_table.png" alt="" />
 
 							<h2>The Apparatus</h2>
 							<h3>Tobii Pro X2-60</h3>
 							<p>We used Tobii Pro X2-60 to collect data, and controlled the lab environment, demographics, novice vs experts.</p>
 							<h3>The Mobile Device Stand</h3>
-							<span class="image main"><img src="images/Shopping_tobii.png" alt="" /></span>
+							<img class="image main" src="images/Shopping_tobii.png" alt="" />
 							<p>The Mobile Device Stand is used for testing on tablets and mobile phones using the Tobii Pro X2 or X3 eye trackers. Users can perform efficient, natural, and high-quality research into how subjects experience mobile websites and apps or how they consume ads on smaller screens. This accessory is suitable for both quantitative and qualitative studies that require detailed behavioral <i>(Tobii Pro Mobile Device Stand brochure, 2017)</i>.</p>
 
 							<h2>The Tasks</h2>
@@ -175,11 +175,11 @@
 
 							<h2>Statistics</h2>
 							
-							<span class="image main"><img src="images/Shopping_avgtime.png" alt="" /><p><b>Different using patterns affect participants' task finishing time.</b></br>Because of cultural difference and the information hierarchy, users had a hard time finding products in Taobao.</p></span>
+							<img class="image main" src="images/Shopping_avgtime.png" alt="" /><p><b>Different using patterns affect participants' task finishing time.</b></br>Because of cultural difference and the information hierarchy, users had a hard time finding products in Taobao.</p>
 
-							<span class="image main"><img src="images/Shopping_VC.png" alt="" /><p><b>Yahoo got the most fixations before finding menu icon</b></br>This diagram shows participants got distracted or attracted on Yahoo!'s main page, probably because the timeline design was very different from the other two apps.</p></span>
+							<img class="image main" src="images/Shopping_VC.png" alt="" /><p><b>Yahoo got the most fixations before finding menu icon</b></br>This diagram shows participants got distracted or attracted on Yahoo!'s main page, probably because the timeline design was very different from the other two apps.</p>
 
-							<span class="image main"><img src="images/Shopping_staall.png" alt="" /><p><b>Overall, Amazon's menu icon is the most efficient</b></br>The less participants spent time on fixation duration, the more efficiently the icons delivered its meaning. Yet users did not recognize Yahoo and Taobao's icons easily.</p></span>
+							<img class="image main" src="images/Shopping_staall.png" alt="" /><p><b>Overall, Amazon's menu icon is the most efficient</b></br>The less participants spent time on fixation duration, the more efficiently the icons delivered its meaning. Yet users did not recognize Yahoo and Taobao's icons easily.</p>
 
 							<h2>Get Insights</h2>
 							<h4>We also conducted retrospective think aloud, and recorded the interview data.</h4>
