--- a/dev-playground.html
+++ b/dev-playground.html
@@ -60,9 +60,12 @@
 								<div class="project-type">User Experience Research</div>
 							</div>
 							<span class="image main"><img src="images/yahoo1.svg" alt="" /></span>
+							<h2>Lightbox!</h2>
+							<img src="http://placekitten.com/800/500" class="kitteh" style="width: 10em"></img>
+							<img src="http://placekitten.com/500/400" id="yay" style="width: 15em"></img>
+
 							<h2>Carousel Example</h2>
 
-							<!-- make sure to give it an ID and then copy/modify the glide js in main.js -->
 							<div class="carousel">
 
 								<button class="carousel-prev"></button>
