--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						</header>
 						<span class="image"><img src="images/me.png" alt="" /></span>
 					</div>
-					<a href="#one" class="goto-next scrolly">Next</a>
+					<!--<a href="#one" class="goto-next scrolly">Next</a>-->
 				</section>
 
 			<!-- 1 -->
@@ -109,7 +109,7 @@
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<!--<a href="#two" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -136,7 +136,7 @@
 							<li><a href="AADL.html" class="button">View Project</a></li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<!--<a href="#three" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -158,10 +158,10 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="AADL.html" class="button">View Project</a></li>
+							<li><a href="StreamingAds.html" class="button">View Project</a></li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<!--<a href="#three" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -188,13 +188,13 @@
 										
 									</div>
 									<ul class="actions">
-										<li><a href="Juvo.html" class="button">View Project</a></li>
+										<li><a href="Shopping.html" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<!--<a href="#two" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -218,10 +218,10 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="AADL.html" class="button">View Project</a></li>
+							<li><a href="OutPerform.html" class="button">View Project</a></li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<!--<a href="#three" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -243,10 +243,10 @@
 							</div>
 						</div>
 						<ul class="actions">
-							<li><a href="AADL.html" class="button">View Project</a></li>
+							<li><a href="Lonely.html" class="button">View Project</a></li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<!--<a href="#three" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
@@ -275,13 +275,13 @@
 											UX Researcher</p>
 									</div>
 									<ul class="actions">
-										<li><a href="Juvo.html" class="button">View Project</a></li>
+										<li><a href="CW.html" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
 						</div>
 					</div>
-					<a href="#two" class="goto-next scrolly">Next</a>
+					<!--<a href="#two" class="goto-next scrolly">Next</a>-->
 				</div>
 			</section>
 
